// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`group kinds > for group > errors > arrow missing 'in y' 1`] = `
[
  {
    "kind": "for in",
    "tokens": [
      {
        "cause": [Error: Missing closing token],
        "token": {
          "tokens": [
            {
              "name": "x",
              "type": "identifier",
            },
          ],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
      {
        "kind": "arrow",
        "tokens": [],
        "type": "group",
      },
    ],
    "type": "group",
  },
  {
    "name": "z",
    "type": "identifier",
  },
]
`;

exports[`group kinds > for group > errors > block missing 'in y' 1`] = `
[
  {
    "kind": "for in",
    "tokens": [
      {
        "cause": [Error: Missing closing token],
        "token": {
          "tokens": [
            {
              "name": "x",
              "type": "identifier",
            },
          ],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
      {
        "kind": "braces",
        "tokens": [
          {
            "name": "z",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > for group > errors > block missing block end 1`] = `
[
  {
    "kind": "for in",
    "tokens": [
      {
        "tokens": [
          {
            "name": "x",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "tokens": [
          {
            "name": "y",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "cause": [Error: Missing closing token],
        "token": {
          "kind": "braces",
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > for group > errors > block missing block start 1`] = `
[
  {
    "kind": "for in",
    "tokens": [
      {
        "tokens": [
          {
            "name": "x",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "cause": [Error: Missing closing token],
        "token": {
          "tokens": [
            {
              "name": "y",
              "type": "identifier",
            },
          ],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
  {
    "cause": [Error: Unexpected closing token "}"],
    "token": {
      "name": "}",
      "type": "identifier",
    },
    "type": "error",
  },
]
`;

exports[`group kinds > for group > errors > colon missing 'in y' 1`] = `
[
  {
    "kind": "for in",
    "tokens": [
      {
        "cause": [Error: Missing closing token],
        "token": {
          "tokens": [
            {
              "name": "x",
              "type": "identifier",
            },
          ],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
      {
        "kind": "colon",
        "tokens": [],
        "type": "group",
      },
    ],
    "type": "group",
  },
  {
    "name": "z",
    "type": "identifier",
  },
]
`;

exports[`group kinds > for group > errors > missing 'in y' and block end 1`] = `
[
  {
    "kind": "for in",
    "tokens": [
      {
        "cause": [Error: Missing closing token],
        "token": {
          "tokens": [
            {
              "name": "x",
              "type": "identifier",
            },
          ],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: Missing closing token],
        "token": {
          "kind": "braces",
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > for group > errors > missing 'in y' and block start 1`] = `
[
  {
    "kind": "for in",
    "tokens": [
      {
        "cause": [Error: Missing closing token],
        "token": {
          "tokens": [
            {
              "name": "x",
              "type": "identifier",
            },
          ],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
  {
    "cause": [Error: Unexpected closing token "}"],
    "token": {
      "name": "}",
      "type": "identifier",
    },
    "type": "error",
  },
]
`;

exports[`group kinds > for group > errors > missing 'in y' and block start inside block 1`] = `
[
  {
    "kind": "braces",
    "tokens": [
      {
        "kind": "for in",
        "tokens": [
          {
            "cause": [Error: Missing closing token],
            "token": {
              "tokens": [
                {
                  "name": "x",
                  "type": "identifier",
                },
              ],
              "type": "group",
            },
            "type": "error",
          },
          {
            "cause": [Error: missing operand],
            "token": {
              "tokens": [],
              "type": "group",
            },
            "type": "error",
          },
          {
            "cause": [Error: missing operand],
            "token": {
              "tokens": [],
              "type": "group",
            },
            "type": "error",
          },
        ],
        "type": "group",
      },
    ],
    "type": "group",
  },
  {
    "cause": [Error: Unexpected closing token "}"],
    "token": {
      "name": "}",
      "type": "identifier",
    },
    "type": "error",
  },
]
`;

exports[`group kinds > for group > errors > missing closing token or block 1`] = `
[
  {
    "kind": "for in",
    "tokens": [
      {
        "tokens": [
          {
            "name": "x",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "cause": [Error: Missing closing token],
        "token": {
          "tokens": [
            {
              "name": "y",
              "type": "identifier",
            },
            {
              "cause": [Error: Unexpected end of source],
              "token": {
                "type": "placeholder",
              },
              "type": "error",
            },
          ],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > for group > errors > missing everything 1`] = `
[
  {
    "kind": "for in",
    "tokens": [
      {
        "cause": [Error: Missing closing token],
        "token": {
          "tokens": [
            {
              "name": "x",
              "type": "identifier",
            },
            {
              "cause": [Error: Unexpected end of source],
              "token": {
                "type": "placeholder",
              },
              "type": "error",
            },
          ],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > for group > for arrow 1`] = `
[
  {
    "kind": "for in",
    "tokens": [
      {
        "tokens": [
          {
            "name": "x",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "tokens": [
          {
            "name": "y",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "kind": "arrow",
        "tokens": [],
        "type": "group",
      },
    ],
    "type": "group",
  },
  {
    "name": "z",
    "type": "identifier",
  },
]
`;

exports[`group kinds > for group > for braces 1`] = `
[
  {
    "kind": "for in",
    "tokens": [
      {
        "tokens": [
          {
            "name": "x",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "tokens": [
          {
            "name": "y",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "kind": "braces",
        "tokens": [
          {
            "name": "z",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > for group > for colon 1`] = `
[
  {
    "kind": "for in",
    "tokens": [
      {
        "tokens": [
          {
            "name": "x",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "tokens": [
          {
            "name": "y",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "kind": "colon",
        "tokens": [],
        "type": "group",
      },
    ],
    "type": "group",
  },
  {
    "name": "z",
    "type": "identifier",
  },
]
`;

exports[`group kinds > match group > errors > missing block end 1`] = `
[
  {
    "kind": "match",
    "tokens": [
      {
        "tokens": [
          {
            "name": "x",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "cause": [Error: Missing closing token],
        "token": {
          "kind": "braces",
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > match group > errors > missing block start 1`] = `
[
  {
    "kind": "match",
    "tokens": [
      {
        "cause": [Error: Missing closing token],
        "token": {
          "tokens": [
            {
              "name": "x",
              "type": "identifier",
            },
          ],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
  {
    "cause": [Error: Unexpected closing token "}"],
    "token": {
      "name": "}",
      "type": "identifier",
    },
    "type": "error",
  },
]
`;

exports[`group kinds > match group > errors > missing block start inside block 1`] = `
[
  {
    "kind": "braces",
    "tokens": [
      {
        "kind": "match",
        "tokens": [
          {
            "cause": [Error: Missing closing token],
            "token": {
              "tokens": [
                {
                  "name": "x",
                  "type": "identifier",
                },
              ],
              "type": "group",
            },
            "type": "error",
          },
          {
            "cause": [Error: missing operand],
            "token": {
              "tokens": [],
              "type": "group",
            },
            "type": "error",
          },
        ],
        "type": "group",
      },
    ],
    "type": "group",
  },
  {
    "cause": [Error: Unexpected closing token "}"],
    "token": {
      "name": "}",
      "type": "identifier",
    },
    "type": "error",
  },
]
`;

exports[`group kinds > match group > errors > missing everything 1`] = `
[
  {
    "kind": "match",
    "tokens": [
      {
        "cause": [Error: Missing closing token],
        "token": {
          "tokens": [
            {
              "name": "x",
              "type": "identifier",
            },
            {
              "cause": [Error: Unexpected end of source],
              "token": {
                "type": "placeholder",
              },
              "type": "error",
            },
          ],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > match group > match 1`] = `
[
  {
    "kind": "match",
    "tokens": [
      {
        "tokens": [
          {
            "name": "x",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "kind": "braces",
        "tokens": [
          {
            "name": "a",
            "type": "identifier",
          },
          {
            "name": "->",
            "type": "identifier",
          },
          {
            "name": "b",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > pair groups > braces 1`] = `
[
  {
    "kind": "braces",
    "tokens": [
      {
        "name": "x",
        "type": "identifier",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > pair groups > braces newlines 1`] = `
[
  {
    "kind": "braces",
    "tokens": [
      {
        "name": "x",
        "type": "identifier",
      },
      {
        "type": "newline",
      },
      {
        "name": "y",
        "type": "identifier",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > pair groups > brackets 1`] = `
[
  {
    "kind": "brackets",
    "tokens": [
      {
        "name": "x",
        "type": "identifier",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > pair groups > errors > missing block end 1`] = `
[
  {
    "cause": [Error: Missing closing token],
    "token": {
      "kind": "braces",
      "tokens": [],
      "type": "group",
    },
    "type": "error",
  },
]
`;

exports[`group kinds > pair groups > errors > missing block end inside block 1`] = `
[
  {
    "cause": [Error: Missing closing token],
    "token": {
      "kind": "braces",
      "tokens": [
        {
          "kind": "braces",
          "tokens": [],
          "type": "group",
        },
        {
          "cause": [Error: Unexpected end of source],
          "token": {
            "type": "placeholder",
          },
          "type": "error",
        },
      ],
      "type": "group",
    },
    "type": "error",
  },
]
`;

exports[`group kinds > pair groups > errors > missing block end inside block inside parens 1`] = `
[
  {
    "kind": "parentheses",
    "tokens": [
      {
        "cause": [Error: Missing closing token],
        "token": {
          "kind": "braces",
          "tokens": [
            {
              "kind": "braces",
              "tokens": [],
              "type": "group",
            },
          ],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > pair groups > errors > missing block start 1`] = `
[
  {
    "cause": [Error: Unexpected closing token "}"],
    "token": {
      "name": "}",
      "type": "identifier",
    },
    "type": "error",
  },
]
`;

exports[`group kinds > pair groups > errors > missing block start inside block 1`] = `
[
  {
    "kind": "braces",
    "tokens": [],
    "type": "group",
  },
  {
    "cause": [Error: Unexpected closing token "}"],
    "token": {
      "name": "}",
      "type": "identifier",
    },
    "type": "error",
  },
]
`;

exports[`group kinds > pair groups > errors > missing block start inside block inside parens 1`] = `
[
  {
    "kind": "parentheses",
    "tokens": [
      {
        "kind": "braces",
        "tokens": [],
        "type": "group",
      },
      {
        "cause": [Error: Unexpected closing token "}"],
        "token": {
          "name": "}",
          "type": "identifier",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > pair groups > errors > missing block start inside parens 1`] = `
[
  {
    "kind": "parentheses",
    "tokens": [
      {
        "cause": [Error: Unexpected closing token "}"],
        "token": {
          "name": "}",
          "type": "identifier",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > pair groups > errors > unclosed inside parens 1`] = `
[
  {
    "kind": "parentheses",
    "tokens": [
      {
        "cause": [Error: Missing closing token],
        "token": {
          "kind": "braces",
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > pair groups > parens 1`] = `
[
  {
    "kind": "parentheses",
    "tokens": [
      {
        "name": "x",
        "type": "identifier",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > while group > errors > block missing block end 1`] = `
[
  {
    "kind": "while",
    "tokens": [
      {
        "tokens": [
          {
            "name": "x",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "cause": [Error: Missing closing token],
        "token": {
          "kind": "braces",
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > while group > errors > block missing block start 1`] = `
[
  {
    "kind": "while",
    "tokens": [
      {
        "cause": [Error: Missing closing token],
        "token": {
          "tokens": [
            {
              "name": "x",
              "type": "identifier",
            },
          ],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
  {
    "cause": [Error: Unexpected closing token "}"],
    "token": {
      "name": "}",
      "type": "identifier",
    },
    "type": "error",
  },
]
`;

exports[`group kinds > while group > errors > missing block start inside block 1`] = `
[
  {
    "kind": "braces",
    "tokens": [
      {
        "kind": "while",
        "tokens": [
          {
            "cause": [Error: Missing closing token],
            "token": {
              "tokens": [
                {
                  "name": "x",
                  "type": "identifier",
                },
              ],
              "type": "group",
            },
            "type": "error",
          },
          {
            "cause": [Error: missing operand],
            "token": {
              "tokens": [],
              "type": "group",
            },
            "type": "error",
          },
        ],
        "type": "group",
      },
    ],
    "type": "group",
  },
  {
    "cause": [Error: Unexpected closing token "}"],
    "token": {
      "name": "}",
      "type": "identifier",
    },
    "type": "error",
  },
]
`;

exports[`group kinds > while group > errors > missing closing token or block 1`] = `
[
  {
    "kind": "while",
    "tokens": [
      {
        "cause": [Error: Missing closing token],
        "token": {
          "tokens": [
            {
              "name": "x",
              "type": "identifier",
            },
            {
              "cause": [Error: Unexpected end of source],
              "token": {
                "type": "placeholder",
              },
              "type": "error",
            },
          ],
          "type": "group",
        },
        "type": "error",
      },
      {
        "cause": [Error: missing operand],
        "token": {
          "tokens": [],
          "type": "group",
        },
        "type": "error",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > while group > while arrow 1`] = `
[
  {
    "kind": "while",
    "tokens": [
      {
        "tokens": [
          {
            "name": "x",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "kind": "arrow",
        "tokens": [],
        "type": "group",
      },
    ],
    "type": "group",
  },
  {
    "name": "z",
    "type": "identifier",
  },
]
`;

exports[`group kinds > while group > while braces 1`] = `
[
  {
    "kind": "while",
    "tokens": [
      {
        "tokens": [
          {
            "name": "x",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "kind": "braces",
        "tokens": [
          {
            "name": "z",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
    ],
    "type": "group",
  },
]
`;

exports[`group kinds > while group > while colon 1`] = `
[
  {
    "kind": "while",
    "tokens": [
      {
        "tokens": [
          {
            "name": "x",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
      {
        "kind": "colon",
        "tokens": [],
        "type": "group",
      },
    ],
    "type": "group",
  },
  {
    "name": "z",
    "type": "identifier",
  },
]
`;

exports[`parseTokens 1`] = `
[
  {
    "type": "number",
    "value": 42,
  },
  {
    "kind": "string template",
    "tokens": [
      {
        "type": "string",
        "value": "Hello",
      },
    ],
    "type": "group",
  },
  {
    "name": "variable",
    "type": "identifier",
  },
  {
    "kind": "parentheses",
    "tokens": [
      {
        "kind": "parentheses",
        "tokens": [
          {
            "name": "expr",
            "type": "identifier",
          },
        ],
        "type": "group",
      },
    ],
    "type": "group",
  },
]
`;
